# FODPrediction

./: .gitignore  Analysis.py  BFOD.py  Bond.py  CLUSTER  CLUSTER-MSI  ElementaryClasses.py  FFOD.py  FOD.py  FODHeuristic.py  FODStruct.py  FRMORB  FRMORB-MSI  Funcs.py  MolecularSet.py  Molecule.py  README.md  REQUEST.py  START.py  Shells.py  debug_bfod.xyz  elements  fileN  files  filesSi  findfods.py  fod_struct.py  globaldata.py  graphing.py  math3d.py  out.xyz  output  output.xyz  pyproject.toml  test.xyz  testCH3.xyz  tmp.py
HelpScripts/: AddCharge.sh  AddXYZ.sh  CreateTargetFODs.sh  FullElectronShell.py  NewNames.sh  log
Molecules_XYZ/: 1ffod  Adenine.xyz  Ar_og.xyz  C2H2_2.65_0.35_0.5_flosic.xyz  C2H2_Target  C2H2_in.xyz  C2H2_og.xyz  C2H4_2.65_w0.35_c0.5_flosic.xyz  C2H4_Target  C2H4_in  C2H4_in.xyz  C2H4_og.xyz  C2H5OH_2.65_w0.35_c0.5_flosic.xyz  C2H5OH_Target  C2H5OH_in  C2H5OH_in.xyz  C2H5OH_og.xyz  C2H5_Target  C2H5_in  C2H5_in.xyz  C2H5_og.xyz  C2HCl_2.65_w0.35_c0.5.xyz  C2HCl_Target  C2HCl_in.xyz  C3H4_2.65_w0.35_c0.5_flosic.xyz  C3H4_Target  C3H4_in  C3H4_in.xyz  C3H4_og.xyz  C3H6O_2.65_w0.35_c0.5.xyz  C3H6O_Target  C3H6O_in.xyz  C3H7_Target  C3H7_in  C3H7_in.xyz  C3H7_og.xyz  C4H5N.ini  C4H5N.pov  C4H5N_2.65_w0.35_c0.5.xyz  C4H5N_Target  (+214 more)
src/: BFOD.py  Bond.py  FFOD.py  Molecule.py  Shells.py  fodlego.py  globaldata.py  graphing.py
src/FODLego/: BFOD.py  ElementaryClasses.py  FOD.py  Molecule.py  Shells.py  __main__.py  experiments.py  globaldata.py
