[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "FODLego"
version = "0.3.9.1"
authors = [{ name="Angel-Emilio Villegas Sanchez", email="ville2a@cmich.edu" }]
description = "This package creates initial FODs for molecules with atoms up to the third row in th periodic table."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = ["rdkit"]
keywords = ["FODs", "FLOSIC", "DFT", "Fermi-Lowdin", "SIE", "SIC", "self-interaction"]

[project.urls]
Homepage = "https://github.com/nerffan1/FODLego"
Issues = "https://github.com/nerffan1/FODLego/issues"
Documentation = "https://nerffan1.github.io/FLOSICDOC/Reference/Generation.html"
Website = "https://www.flosic.org/"

[project.scripts]
fodlego = "FODLego.__main__:main"
